--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <!-- <video src="./assets/landing video.mp4" autoplay muted loop></video> -->
+     
     <script src="assets/script.js"></script>
 </body>
 </html>
