--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mental WellNess</title>
+    <title>Mood Map</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <!-- <video src="./assets/landing video.mp4" autoplay muted loop></video> -->
+    <navbar class="nav">
+        <a>
+            <img src="assets/logo.png" alt="Mood Map Logo">
+            
+        </a>
+    </navbar>
+    <div class="page1">
+        <video src="./assets/landing video.mp4" autoplay muted loop></video>
+        <div class="heading">
+            <h1>
+                Your Path to <br>Mental Wellness
+            </h1>
+        </div>
+    </div>
+    <div class="page2">
+
+    </div>
      
     <script src="assets/script.js"></script>
 </body>
