--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -16,7 +16,7 @@
 <body>
     <navbar class="nav">
         <div class="head1">
-            <a href="#">
+            <a href="#" id="ic">
                 <img src="assets/logo.png" alt="Mood Map Logo" >
             </a>
             <div class="main-nav">
@@ -28,7 +28,7 @@
             <a href="#">Feedback</a>
             <a href="#">Contact Us</a>
 
-        </div>
+            </div>
             
         </div>
        
