--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -42,7 +42,7 @@
             <h1 class="head2">
                 Mental Wellness
             </h1>
-            <button>Get Started</button>
+            <button class="head2">Get Started</button>
         </div>
     </div>
     <div class="page2">
