small changes in navbar

--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -24,7 +24,7 @@
             <a href="#">Dashboard</a>
             <a href="#">Quizes</a>
             <a href="#">Your Doctor</a>
-            <a href="#">Heeling Huddles</a>
+            <a href="#">Healing Huddles</a>
             <a href="#">Feedback</a>
             <a href="#">Contact Us</a>
 
