--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -13,7 +13,7 @@
     <navbar class="nav">
         <div class="head1">
             <a href="#" id="ic">
-                <img src="assets/logo.png" alt="Mood Map Logo">
+                <img src="assets/logo.png" alt="Mood Map Logo" class="logo-large">
             </a>
             <div class="main-nav">
             <a href="#">Home</a>
