--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -22,7 +22,7 @@
             <a href="#">Your Doctor</a>
             <a href="#">Heeling Huddles</a>
             <a href="#">Feedback</a>
-            <a href="#">Contac Us</a>
+            <a href="#">Contact Us</a>
 
             </div>
         </div>
