--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -20,7 +20,7 @@
             <a href="#">Dashboard</a>
             <a href="#">Quizes</a>
             <a href="#">Your Doctor</a>
-            <a href="#">Heeling Huddles</a>
+            <a href="#">Healing Huddles</a>
             <a href="#">Feedback</a>
             <a href="#">Contact Us</a>
 
@@ -37,10 +37,20 @@
             </div>
         </div>
         <div class="page2">
-            <div class="main-heading">
-                <h1>What is mood map...?</h1>
+            <video src="assets/page2 video.mp4" autoplay muted loop></video>
+            <div class="main-content">
+                <!-- <div class="main-heading">
+                    <h1 id="what">What</h1> <h1 id="is">is</h1> <h1 id="mood">mood</h1> <h1 id="map">map...?</h1>
+                </div>
+                <div class="main-content-part">
+                    <p>
+                        Welcome to <b>MOOD MAP</b>
+                        We're here to support you on your mental health journey. With our real-time mood map, you can track your emotions and gain a deeper understanding of how you're feeling in the moment. Whether it's a quick check-in with a psychiatrist, calming yoga and meditation sessions, or a quiz to learn more about your stress, we’re always here with the tools and support you need.
+                    </p>
+                </div> -->
             </div>
         </div>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/script.js"></script>
