--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -28,7 +28,7 @@
         </div>
     </navbar>
     <div class="main">
-        <div class="page1">
+        <div class="page1" id="home">
             <video src="./assets/landing video.mp4" autoplay muted loop></video>
             <div class="heading">
                 <h1 class="head1">Your Path to</h1>
@@ -36,19 +36,19 @@
                 <button class="head2">Get Started</button>
             </div>
         </div>
-        <div class="page2">
-            <video src="assets/page2 video.mp4" autoplay muted loop></video>
-            <div class="main-content">
-                <!-- <div class="main-heading">
-                    <h1 id="what">What</h1> <h1 id="is">is</h1> <h1 id="mood">mood</h1> <h1 id="map">map...?</h1>
+        <div class="page2" id="page2">
+            <video id="page2v"  src="assets/page2 video - Made with Clipchamp.mp4" autoplay muted loop></video>
+            <div class="heading page2head">
+                <div class="main-head">
+                    <h1 id="what">WHAT</h1><h1 id="is">IS</h1><h1 id="what">MOOD</h1><h1 id="is">MAP...?</h1>
                 </div>
-                <div class="main-content-part">
+                <div class="main-para">
                     <p>
-                        Welcome to <b>MOOD MAP</b>
-                        We're here to support you on your mental health journey. With our real-time mood map, you can track your emotions and gain a deeper understanding of how you're feeling in the moment. Whether it's a quick check-in with a psychiatrist, calming yoga and meditation sessions, or a quiz to learn more about your stress, we’re always here with the tools and support you need.
+                        <b>Mood Map</b> is a comprehensive, free, and open-source tool designed to help people understand and navigate their emotional landscape. It offers a visual representation of their emotions, along with suggestions for self-care and support. Mood Map is a powerful tool that can help individuals identify their emotional state, improve their mood, and manage their stress and anxiety.At <b>Mood Map</b>, we believe taking care of your mind should be easy, accessible, and compassionate—because your well-being matters
                     </p>
-                </div> -->
+                </div>
             </div>
+            
         </div>
 
     </div>
