--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -42,7 +42,7 @@
                 <div class="main-head">
                     <h1 id="what">WHAT</h1><h1 id="is">IS</h1><h1 id="what">MOOD</h1><h1 id="is">MAP...?</h1>
                 </div>
-                <div class="main-para">
+                <div class="main-para" id="is">
                     <p>
                         <b>Mood Map</b> is a comprehensive, free, and open-source tool designed to help people understand and navigate their emotional landscape. It offers a visual representation of their emotions, along with suggestions for self-care and support. Mood Map is a powerful tool that can help individuals identify their emotional state, improve their mood, and manage their stress and anxiety.At <b>Mood Map</b>, we believe taking care of your mind should be easy, accessible, and compassionate—because your well-being matters
                     </p>
@@ -52,6 +52,7 @@
         </div>
 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/script.js"></script>
 </body>
