--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <navbar class="nav">
-        <div class="head1">
+        <div class="head12">
             <a href="#" id="ic">
                 <img src="assets/logo.png" alt="Mood Map Logo" class="logo-large">
             </a>
@@ -31,9 +31,9 @@
         <div class="page1" id="home">
             <video src="./assets/landing video.mp4" autoplay muted loop></video>
             <div class="heading">
-                <h1 class="head1">Your Path to</h1>
-                <h1 class="head2">Mental Wellness</h1>
-                <button class="head2">Get Started</button>
+                <div class="head11"><h1 class="head1">Your Path to</h1></div>
+                <div class="head22"><h1 class="head2">Mental Wellness</h1></div>
+                <button class="btn12">Get Started</button>
             </div>
         </div>
         <div class="page2" id="page2">
@@ -50,6 +50,9 @@
             </div>
             
         </div>
+        <!-- <div class="page3" id="page3v">
+            <video src="assets/page3video - Made with Clipchamp.mp4" autoplay loop muted></video>
+        </div> -->
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
