--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -33,7 +33,7 @@
             <div class="heading">
                 <div class="head11"><h1 class="head1">Your Path to</h1></div>
                 <div class="head22"><h1 class="head2">Mental Wellness</h1></div>
-                <button class="btn12">Get Started</button>
+                <a href="./Login Page/index.html" id="transition-link" class="btn12">Get Started</a>
             </div>
         </div>
         <div class="page2" id="page2">
