feedback page added

--- a/Landing Page/indext.html
+++ b/Landing Page/indext.html
@@ -23,7 +23,7 @@
             <a href="#">Quizzes</a>
             <a href="#">Your Doctor</a>
             <a href="#">Healing Huddles</a>
-            <a href="#">Feedback</a>
+            <a href="./Feedback/index.html">Feedback</a>
             <a href="#">Contact Us</a>
             </div>
         </div>
